--- a/angular/src/main/java/angular-tutorial/package.json
+++ b/angular/src/main/java/angular-tutorial/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~8.2.14",
     "@material/dialog": "^4.0.0",
     "hammerjs": "^2.0.8",
+    "ngx-cookie-service": "^2.3.0",
     "ngx-logger": "^4.0.8",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
